--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3308/mall?serverTimezone=Asia/Taipei&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=ji#@k7au$a83
